@@ -1,12 +1,14 @@
 package org.thoughtcrime.securesms.service;
 
 
+import android.Manifest;
 import android.app.Service;
 import android.content.BroadcastReceiver;
 import android.content.Context;
 import android.content.Intent;
 import android.content.IntentFilter;
 import android.media.AudioManager;
+import android.net.Uri;
 import android.os.Build;
 import android.os.Bundle;
 import android.os.Handler;
@@ -17,7 +19,7 @@ import android.support.annotation.NonNull;
 import android.support.annotation.Nullable;
 import android.support.annotation.WorkerThread;
 import android.telephony.TelephonyManager;
-import android.util.Log;
+import org.thoughtcrime.securesms.logging.Log;
 import android.util.Pair;
 
 import com.google.protobuf.InvalidProtocolBufferException;
@@ -28,10 +30,11 @@ import org.thoughtcrime.securesms.WebRtcCallActivity;
 import org.thoughtcrime.securesms.contacts.ContactAccessor;
 import org.thoughtcrime.securesms.database.Address;
 import org.thoughtcrime.securesms.database.DatabaseFactory;
+import org.thoughtcrime.securesms.database.RecipientDatabase.VibrateState;
 import org.thoughtcrime.securesms.dependencies.InjectableType;
-import org.thoughtcrime.securesms.dependencies.SignalCommunicationModule.SignalMessageSenderFactory;
 import org.thoughtcrime.securesms.events.WebRtcViewModel;
 import org.thoughtcrime.securesms.notifications.MessageNotifier;
+import org.thoughtcrime.securesms.permissions.Permissions;
 import org.thoughtcrime.securesms.recipients.Recipient;
 import org.thoughtcrime.securesms.util.FutureTaskListener;
 import org.thoughtcrime.securesms.util.ListenableFutureTask;
@@ -39,6 +42,7 @@ import org.thoughtcrime.securesms.util.ServiceUtil;
 import org.thoughtcrime.securesms.util.TextSecurePreferences;
 import org.thoughtcrime.securesms.util.Util;
 import org.thoughtcrime.securesms.webrtc.CallNotificationBuilder;
+import org.thoughtcrime.securesms.webrtc.CameraState;
 import org.thoughtcrime.securesms.webrtc.IncomingPstnCallReceiver;
 import org.thoughtcrime.securesms.webrtc.PeerConnectionFactoryOptions;
 import org.thoughtcrime.securesms.webrtc.PeerConnectionWrapper;
@@ -63,7 +67,6 @@ import org.webrtc.PeerConnectionFactory;
 import org.webrtc.RtpReceiver;
 import org.webrtc.SessionDescription;
 import org.webrtc.SurfaceViewRenderer;
-import org.webrtc.VideoRenderer;
 import org.webrtc.VideoTrack;
 import org.whispersystems.libsignal.IdentityKey;
 import org.whispersystems.signalservice.api.SignalServiceAccountManager;
@@ -96,10 +99,16 @@ import java.util.concurrent.TimeUnit;
 import javax.inject.Inject;
 
 import static org.thoughtcrime.securesms.webrtc.CallNotificationBuilder.TYPE_ESTABLISHED;
+import static org.thoughtcrime.securesms.webrtc.CallNotificationBuilder.TYPE_INCOMING_CONNECTING;
 import static org.thoughtcrime.securesms.webrtc.CallNotificationBuilder.TYPE_INCOMING_RINGING;
 import static org.thoughtcrime.securesms.webrtc.CallNotificationBuilder.TYPE_OUTGOING_RINGING;
 
-public class WebRtcCallService extends Service implements InjectableType, PeerConnection.Observer, DataChannel.Observer, BluetoothStateManager.BluetoothStateListener {
+public class WebRtcCallService extends Service implements InjectableType,
+                                                          PeerConnection.Observer,
+                                                          DataChannel.Observer,
+                                                          BluetoothStateManager.BluetoothStateListener,
+                                                          PeerConnectionWrapper.CameraEventListener
+{
 
   private static final String TAG = WebRtcCallService.class.getSimpleName();
 
@@ -127,6 +136,7 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
   public static final String ACTION_LOCAL_HANGUP         = "LOCAL_HANGUP";
   public static final String ACTION_SET_MUTE_AUDIO       = "SET_MUTE_AUDIO";
   public static final String ACTION_SET_MUTE_VIDEO       = "SET_MUTE_VIDEO";
+  public static final String ACTION_FLIP_CAMERA          = "FLIP_CAMERA";
   public static final String ACTION_BLUETOOTH_CHANGE     = "BLUETOOTH_CHANGE";
   public static final String ACTION_WIRED_HEADSET_CHANGE = "WIRED_HEADSET_CHANGE";
   public static final String ACTION_SCREEN_OFF           = "SCREEN_OFF";
@@ -142,16 +152,15 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
   public static final String ACTION_REMOTE_VIDEO_MUTE = "REMOTE_VIDEO_MUTE";
   public static final String ACTION_ICE_CONNECTED     = "ICE_CONNECTED";
 
-  private CallState callState          = CallState.STATE_IDLE;
-  private boolean   microphoneEnabled  = true;
-  private boolean   localVideoEnabled  = false;
-  private boolean   remoteVideoEnabled = false;
-  private boolean   bluetoothAvailable = false;
+  private CallState   callState          = CallState.STATE_IDLE;
+  private CameraState localCameraState   = CameraState.UNKNOWN;
+  private boolean     microphoneEnabled  = true;
+  private boolean     remoteVideoEnabled = false;
+  private boolean     bluetoothAvailable = false;
 
-  @Inject public SignalMessageSenderFactory  messageSenderFactory;
+  @Inject public SignalServiceMessageSender  messageSender;
   @Inject public SignalServiceAccountManager accountManager;
 
-  private SignalServiceMessageSender messageSender;
   private PeerConnectionFactory      peerConnectionFactory;
   private SignalAudioManager         audioManager;
   private BluetoothStateManager      bluetoothStateManager;
@@ -190,34 +199,32 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
 
   @Override
   public int onStartCommand(final Intent intent, int flags, int startId) {
-    Log.w(TAG, "onStartCommand...");
+    Log.i(TAG, "onStartCommand...");
     if (intent == null || intent.getAction() == null) return START_NOT_STICKY;
 
-    serviceExecutor.execute(new Runnable() {
-      @Override
-      public void run() {
-        if      (intent.getAction().equals(ACTION_INCOMING_CALL) && isBusy()) handleBusyCall(intent);
-        else if (intent.getAction().equals(ACTION_REMOTE_BUSY))               handleBusyMessage(intent);
-        else if (intent.getAction().equals(ACTION_INCOMING_CALL))             handleIncomingCall(intent);
-        else if (intent.getAction().equals(ACTION_OUTGOING_CALL) && isIdle()) handleOutgoingCall(intent);
-        else if (intent.getAction().equals(ACTION_ANSWER_CALL))               handleAnswerCall(intent);
-        else if (intent.getAction().equals(ACTION_DENY_CALL))                 handleDenyCall(intent);
-        else if (intent.getAction().equals(ACTION_LOCAL_HANGUP))              handleLocalHangup(intent);
-        else if (intent.getAction().equals(ACTION_REMOTE_HANGUP))             handleRemoteHangup(intent);
-        else if (intent.getAction().equals(ACTION_SET_MUTE_AUDIO))            handleSetMuteAudio(intent);
-        else if (intent.getAction().equals(ACTION_SET_MUTE_VIDEO))            handleSetMuteVideo(intent);
-        else if (intent.getAction().equals(ACTION_BLUETOOTH_CHANGE))          handleBluetoothChange(intent);
-        else if (intent.getAction().equals(ACTION_WIRED_HEADSET_CHANGE))      handleWiredHeadsetChange(intent);
-        else if (intent.getAction().equals((ACTION_SCREEN_OFF)))              handleScreenOffChange(intent);
-        else if (intent.getAction().equals(ACTION_REMOTE_VIDEO_MUTE))         handleRemoteVideoMute(intent);
-        else if (intent.getAction().equals(ACTION_RESPONSE_MESSAGE))          handleResponseMessage(intent);
-        else if (intent.getAction().equals(ACTION_ICE_MESSAGE))               handleRemoteIceCandidate(intent);
-        else if (intent.getAction().equals(ACTION_ICE_CANDIDATE))             handleLocalIceCandidate(intent);
-        else if (intent.getAction().equals(ACTION_ICE_CONNECTED))             handleIceConnected(intent);
-        else if (intent.getAction().equals(ACTION_CALL_CONNECTED))            handleCallConnected(intent);
-        else if (intent.getAction().equals(ACTION_CHECK_TIMEOUT))             handleCheckTimeout(intent);
-        else if (intent.getAction().equals(ACTION_IS_IN_CALL_QUERY))          handleIsInCallQuery(intent);
-      }
+    serviceExecutor.execute(() -> {
+      if      (intent.getAction().equals(ACTION_INCOMING_CALL) && isBusy()) handleBusyCall(intent);
+      else if (intent.getAction().equals(ACTION_REMOTE_BUSY))               handleBusyMessage(intent);
+      else if (intent.getAction().equals(ACTION_INCOMING_CALL))             handleIncomingCall(intent);
+      else if (intent.getAction().equals(ACTION_OUTGOING_CALL) && isIdle()) handleOutgoingCall(intent);
+      else if (intent.getAction().equals(ACTION_ANSWER_CALL))               handleAnswerCall(intent);
+      else if (intent.getAction().equals(ACTION_DENY_CALL))                 handleDenyCall(intent);
+      else if (intent.getAction().equals(ACTION_LOCAL_HANGUP))              handleLocalHangup(intent);
+      else if (intent.getAction().equals(ACTION_REMOTE_HANGUP))             handleRemoteHangup(intent);
+      else if (intent.getAction().equals(ACTION_SET_MUTE_AUDIO))            handleSetMuteAudio(intent);
+      else if (intent.getAction().equals(ACTION_SET_MUTE_VIDEO))            handleSetMuteVideo(intent);
+      else if (intent.getAction().equals(ACTION_FLIP_CAMERA))           handleSetCameraFlip(intent);
+      else if (intent.getAction().equals(ACTION_BLUETOOTH_CHANGE))          handleBluetoothChange(intent);
+      else if (intent.getAction().equals(ACTION_WIRED_HEADSET_CHANGE))      handleWiredHeadsetChange(intent);
+      else if (intent.getAction().equals((ACTION_SCREEN_OFF)))              handleScreenOffChange(intent);
+      else if (intent.getAction().equals(ACTION_REMOTE_VIDEO_MUTE))         handleRemoteVideoMute(intent);
+      else if (intent.getAction().equals(ACTION_RESPONSE_MESSAGE))          handleResponseMessage(intent);
+      else if (intent.getAction().equals(ACTION_ICE_MESSAGE))               handleRemoteIceCandidate(intent);
+      else if (intent.getAction().equals(ACTION_ICE_CANDIDATE))             handleLocalIceCandidate(intent);
+      else if (intent.getAction().equals(ACTION_ICE_CONNECTED))             handleIceConnected(intent);
+      else if (intent.getAction().equals(ACTION_CALL_CONNECTED))            handleCallConnected(intent);
+      else if (intent.getAction().equals(ACTION_CHECK_TIMEOUT))             handleCheckTimeout(intent);
+      else if (intent.getAction().equals(ACTION_IS_IN_CALL_QUERY))          handleIsInCallQuery(intent);
     });
 
     return START_NOT_STICKY;
@@ -252,7 +259,7 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
 
   @Override
   public void onBluetoothStateChanged(boolean isAvailable) {
-    Log.w(TAG, "onBluetoothStateChanged: " + isAvailable);
+    Log.i(TAG, "onBluetoothStateChanged: " + isAvailable);
 
     Intent intent = new Intent(this, WebRtcCallService.class);
     intent.setAction(ACTION_BLUETOOTH_CHANGE);
@@ -261,6 +268,15 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
     startService(intent);
   }
 
+  @Override
+  public void onCameraSwitchCompleted(@NonNull CameraState newCameraState) {
+    this.localCameraState = newCameraState;
+    if (recipient != null) {
+      sendMessage(viewModelStateFor(callState), recipient, localCameraState, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled);
+    }
+  }
+
+
   // Initializers
 
   private void initializeResources() {
@@ -268,10 +284,9 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
 
     this.callState             = CallState.STATE_IDLE;
     this.lockManager           = new LockManager(this);
-    this.peerConnectionFactory = new PeerConnectionFactory(new PeerConnectionFactoryOptions());
+    this.peerConnectionFactory = PeerConnectionFactory.builder().setOptions(new PeerConnectionFactoryOptions()).createPeerConnectionFactory();
     this.audioManager          = new SignalAudioManager(this);
     this.bluetoothStateManager = new BluetoothStateManager(this, this);
-    this.messageSender         = messageSenderFactory.create();
     this.messageSender.setSoTimeoutMillis(TimeUnit.SECONDS.toMillis(10));
     this.accountManager.setSoTimeoutMillis(TimeUnit.SECONDS.toMillis(10));
   }
@@ -319,7 +334,7 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
   // Handlers
 
   private void handleIncomingCall(final Intent intent) {
-    Log.w(TAG, "handleIncomingCall()");
+    Log.i(TAG, "handleIncomingCall()");
     if (callState != CallState.STATE_IDLE) throw new IllegalStateException("Incoming on non-idle");
 
     final String offer = intent.getStringExtra(EXTRA_REMOTE_DESCRIPTION);
@@ -335,6 +350,10 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
       return;
     }
 
+    if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.O) {
+      setCallInProgressNotification(TYPE_INCOMING_CONNECTING, this.recipient);
+    }
+
     timeoutExecutor.schedule(new TimeoutRunnable(this.callId), 2, TimeUnit.MINUTES);
 
     initializeVideo();
@@ -343,15 +362,21 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
       @Override
       public void onSuccessContinue(List<PeerConnection.IceServer> result) {
         try {
-          boolean isSystemContact = ContactAccessor.getInstance().isSystemContact(WebRtcCallService.this, recipient.getAddress().serialize());
-          boolean isAlwaysTurn    = TextSecurePreferences.isTurnOnly(WebRtcCallService.this);
+          boolean isSystemContact = false;
 
-          WebRtcCallService.this.peerConnection = new PeerConnectionWrapper(WebRtcCallService.this, peerConnectionFactory, WebRtcCallService.this, localRenderer, result, !isSystemContact || isAlwaysTurn);
+          if (Permissions.hasAny(WebRtcCallService.this, Manifest.permission.READ_CONTACTS, Manifest.permission.WRITE_CONTACTS)) {
+            isSystemContact = ContactAccessor.getInstance().isSystemContact(WebRtcCallService.this, recipient.getAddress().serialize());
+          }
+
+          boolean isAlwaysTurn = TextSecurePreferences.isTurnOnly(WebRtcCallService.this);
+
+          WebRtcCallService.this.peerConnection   = new PeerConnectionWrapper(WebRtcCallService.this, peerConnectionFactory, WebRtcCallService.this, localRenderer, result, WebRtcCallService.this, !isSystemContact || isAlwaysTurn);
+          WebRtcCallService.this.localCameraState = WebRtcCallService.this.peerConnection.getCameraState();
           WebRtcCallService.this.peerConnection.setRemoteDescription(new SessionDescription(SessionDescription.Type.OFFER, offer));
           WebRtcCallService.this.lockManager.updatePhoneState(LockManager.PhoneState.PROCESSING);
 
           SessionDescription sdp = WebRtcCallService.this.peerConnection.createAnswer(new MediaConstraints());
-          Log.w(TAG, "Answer SDP: " + sdp.description);
+          Log.i(TAG, "Answer SDP: " + sdp.description);
           WebRtcCallService.this.peerConnection.setLocalDescription(sdp);
 
           ListenableFutureTask<Boolean> listenableFutureTask = sendMessage(recipient, SignalServiceCallMessage.forAnswer(new AnswerMessage(WebRtcCallService.this.callId, sdp.description)));
@@ -367,6 +392,10 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
               terminate();
             }
           });
+
+          if (recipient != null) {
+            sendMessage(viewModelStateFor(callState), recipient, localCameraState, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled);
+          }
         } catch (PeerConnectionException e) {
           Log.w(TAG, e);
           terminate();
@@ -376,7 +405,7 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
   }
 
   private void handleOutgoingCall(Intent intent) {
-    Log.w(TAG, "handleOutgoingCall...");
+    Log.i(TAG, "handleOutgoingCall...");
 
     if (callState != CallState.STATE_IDLE) throw new IllegalStateException("Dialing from non-idle?");
 
@@ -388,7 +417,7 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
 
       initializeVideo();
 
-      sendMessage(WebRtcViewModel.State.CALL_OUTGOING, recipient, localVideoEnabled, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled);
+      sendMessage(WebRtcViewModel.State.CALL_OUTGOING, recipient, localCameraState, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled);
       lockManager.updatePhoneState(LockManager.PhoneState.IN_CALL);
       audioManager.initializeAudioForCall();
       audioManager.startOutgoingRinger(OutgoingRinger.Type.SONAR);
@@ -405,14 +434,15 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
           try {
             boolean isAlwaysTurn = TextSecurePreferences.isTurnOnly(WebRtcCallService.this);
 
-            WebRtcCallService.this.peerConnection = new PeerConnectionWrapper(WebRtcCallService.this, peerConnectionFactory, WebRtcCallService.this, localRenderer, result, isAlwaysTurn);
+            WebRtcCallService.this.peerConnection = new PeerConnectionWrapper(WebRtcCallService.this, peerConnectionFactory, WebRtcCallService.this, localRenderer, result, WebRtcCallService.this, isAlwaysTurn);
+            WebRtcCallService.this.localCameraState = WebRtcCallService.this.peerConnection.getCameraState();
             WebRtcCallService.this.dataChannel    = WebRtcCallService.this.peerConnection.createDataChannel(DATA_CHANNEL_NAME);
             WebRtcCallService.this.dataChannel.registerObserver(WebRtcCallService.this);
 
             SessionDescription sdp = WebRtcCallService.this.peerConnection.createOffer(new MediaConstraints());
             WebRtcCallService.this.peerConnection.setLocalDescription(sdp);
 
-            Log.w(TAG, "Sending offer: " + sdp.description);
+            Log.i(TAG, "Sending offer: " + sdp.description);
 
             ListenableFutureTask<Boolean> listenableFutureTask = sendMessage(recipient, SignalServiceCallMessage.forOffer(new OfferMessage(WebRtcCallService.this.callId, sdp.description)));
 
@@ -422,16 +452,20 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
                 Log.w(TAG, error);
 
                 if (error instanceof UntrustedIdentityException) {
-                  sendMessage(WebRtcViewModel.State.UNTRUSTED_IDENTITY, recipient, ((UntrustedIdentityException)error).getIdentityKey(), localVideoEnabled, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled);
+                  sendMessage(WebRtcViewModel.State.UNTRUSTED_IDENTITY, recipient, ((UntrustedIdentityException)error).getIdentityKey(), localCameraState, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled);
                 } else if (error instanceof UnregisteredUserException) {
-                  sendMessage(WebRtcViewModel.State.NO_SUCH_USER, recipient, localVideoEnabled, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled);
+                  sendMessage(WebRtcViewModel.State.NO_SUCH_USER, recipient, localCameraState, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled);
                 } else if (error instanceof IOException) {
-                  sendMessage(WebRtcViewModel.State.NETWORK_FAILURE, recipient, localVideoEnabled, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled);
+                  sendMessage(WebRtcViewModel.State.NETWORK_FAILURE, recipient, localCameraState, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled);
                 }
 
                 terminate();
               }
             });
+
+            if (recipient != null) {
+              sendMessage(viewModelStateFor(callState), recipient, localCameraState, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled);
+            }
           } catch (PeerConnectionException e) {
             Log.w(TAG, e);
             terminate();
@@ -445,7 +479,7 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
 
   private void handleResponseMessage(Intent intent) {
     try {
-      Log.w(TAG, "Got response: " + intent.getStringExtra(EXTRA_REMOTE_DESCRIPTION));
+      Log.i(TAG, "Got response: " + intent.getStringExtra(EXTRA_REMOTE_DESCRIPTION));
 
       if (callState != CallState.STATE_DIALING || !getRemoteRecipient(intent).equals(recipient) || !Util.isEquals(this.callId, getCallId(intent))) {
         Log.w(TAG, "Got answer for recipient and call id we're not currently dialing: " + getCallId(intent) + ", " + getRemoteRecipient(intent));
@@ -463,7 +497,7 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
           @Override
           public void onFailureContinue(Throwable error) {
             Log.w(TAG, error);
-            sendMessage(WebRtcViewModel.State.NETWORK_FAILURE, recipient, localVideoEnabled, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled);
+            sendMessage(WebRtcViewModel.State.NETWORK_FAILURE, recipient, localCameraState, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled);
 
             terminate();
           }
@@ -479,7 +513,7 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
   }
 
   private void handleRemoteIceCandidate(Intent intent) {
-    Log.w(TAG, "handleRemoteIceCandidate...");
+    Log.i(TAG, "handleRemoteIceCandidate...");
 
     if (Util.isEquals(this.callId, getCallId(intent))) {
       IceCandidate candidate = new IceCandidate(intent.getStringExtra(EXTRA_ICE_SDP_MID),
@@ -506,7 +540,7 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
                                                              intent.getStringExtra(EXTRA_ICE_SDP));
 
     if (pendingOutgoingIceUpdates != null) {
-      Log.w(TAG, "Adding to pending ice candidates...");
+      Log.i(TAG, "Adding to pending ice candidates...");
       this.pendingOutgoingIceUpdates.add(iceUpdateMessage);
       return;
     }
@@ -517,7 +551,7 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
       @Override
       public void onFailureContinue(Throwable error) {
         Log.w(TAG, error);
-        sendMessage(WebRtcViewModel.State.NETWORK_FAILURE, recipient, localVideoEnabled, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled);
+        sendMessage(WebRtcViewModel.State.NETWORK_FAILURE, recipient, localCameraState, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled);
 
         terminate();
       }
@@ -531,10 +565,18 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
       this.callState = CallState.STATE_LOCAL_RINGING;
       this.lockManager.updatePhoneState(LockManager.PhoneState.INTERACTIVE);
 
-      sendMessage(WebRtcViewModel.State.CALL_INCOMING, recipient, localVideoEnabled, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled);
+      sendMessage(WebRtcViewModel.State.CALL_INCOMING, recipient, localCameraState, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled);
       startCallCardActivity();
       audioManager.initializeAudioForCall();
-      audioManager.startIncomingRinger();
+
+      if (TextSecurePreferences.isCallNotificationsEnabled(this)) {
+        Uri          ringtone     = recipient.resolve().getCallRingtone();
+        VibrateState vibrateState = recipient.resolve().getCallVibrate();
+
+        if (ringtone == null) ringtone = TextSecurePreferences.getCallNotificationRingtone(this);
+
+        audioManager.startIncomingRinger(ringtone, vibrateState == VibrateState.ENABLED || (vibrateState == VibrateState.DEFAULT && TextSecurePreferences.isCallNotificationVibrateEnabled(this)));
+      }
 
       registerPowerButtonReceiver();
 
@@ -545,7 +587,7 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
       this.callState = CallState.STATE_REMOTE_RINGING;
       this.audioManager.startOutgoingRinger(OutgoingRinger.Type.RINGING);
 
-      sendMessage(WebRtcViewModel.State.CALL_RINGING, recipient, localVideoEnabled, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled);
+      sendMessage(WebRtcViewModel.State.CALL_RINGING, recipient, localCameraState, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled);
     }
   }
 
@@ -569,22 +611,23 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
 
     callState = CallState.STATE_CONNECTED;
 
-    if (localVideoEnabled) lockManager.updatePhoneState(LockManager.PhoneState.IN_VIDEO);
-    else                   lockManager.updatePhoneState(LockManager.PhoneState.IN_CALL);
+    if (localCameraState.isEnabled()) lockManager.updatePhoneState(LockManager.PhoneState.IN_VIDEO);
+    else                              lockManager.updatePhoneState(LockManager.PhoneState.IN_CALL);
 
-    sendMessage(WebRtcViewModel.State.CALL_CONNECTED, recipient, localVideoEnabled, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled);
+    sendMessage(WebRtcViewModel.State.CALL_CONNECTED, recipient, localCameraState, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled);
 
     unregisterPowerButtonReceiver();
 
     setCallInProgressNotification(TYPE_ESTABLISHED, recipient);
 
+    this.peerConnection.setCommunicationMode();
     this.peerConnection.setAudioEnabled(microphoneEnabled);
-    this.peerConnection.setVideoEnabled(localVideoEnabled);
+    this.peerConnection.setVideoEnabled(localCameraState.isEnabled());
 
     this.dataChannel.send(new DataChannel.Buffer(ByteBuffer.wrap(Data.newBuilder()
                                                                      .setVideoStreamingStatus(WebRtcDataProtos.VideoStreamingStatus.newBuilder()
                                                                                                                                    .setId(this.callId)
-                                                                                                                                   .setEnabled(localVideoEnabled))
+                                                                                                                                   .setEnabled(localCameraState.isEnabled()))
                                                                      .build().toByteArray()), false));
   }
 
@@ -592,12 +635,28 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
     Recipient recipient = getRemoteRecipient(intent);
     long      callId    = getCallId(intent);
 
+    if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.O) {
+      switch (callState) {
+        case STATE_DIALING:
+        case STATE_REMOTE_RINGING: setCallInProgressNotification(TYPE_OUTGOING_RINGING, this.recipient);    break;
+        case STATE_IDLE:           setCallInProgressNotification(TYPE_INCOMING_CONNECTING, recipient);      break;
+        case STATE_ANSWERING:      setCallInProgressNotification(TYPE_INCOMING_CONNECTING, this.recipient); break;
+        case STATE_LOCAL_RINGING:  setCallInProgressNotification(TYPE_INCOMING_RINGING, this.recipient);    break;
+        case STATE_CONNECTED:      setCallInProgressNotification(TYPE_ESTABLISHED, this.recipient);         break;
+        default:                   throw new AssertionError();
+      }
+    }
+
+    if (callState == CallState.STATE_IDLE) {
+      stopForeground(true);
+    }
+
     sendMessage(recipient, SignalServiceCallMessage.forBusy(new BusyMessage(callId)));
     insertMissedCall(getRemoteRecipient(intent), false);
   }
 
   private void handleBusyMessage(Intent intent) {
-    Log.w(TAG, "handleBusyMessage...");
+    Log.i(TAG, "handleBusyMessage...");
 
     final Recipient recipient = getRemoteRecipient(intent);
     final long      callId    = getCallId(intent);
@@ -607,7 +666,7 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
       return;
     }
 
-    sendMessage(WebRtcViewModel.State.CALL_BUSY, recipient, localVideoEnabled, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled);
+    sendMessage(WebRtcViewModel.State.CALL_BUSY, recipient, localCameraState, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled);
 
     audioManager.startOutgoingRinger(OutgoingRinger.Type.BUSY);
     Util.runOnMainDelayed(new Runnable() {
@@ -629,7 +688,7 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
         this.callState != CallState.STATE_CONNECTED)
     {
       Log.w(TAG, "Timing out call: " + this.callId);
-      sendMessage(WebRtcViewModel.State.CALL_DISCONNECTED, this.recipient, localVideoEnabled, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled);
+      sendMessage(WebRtcViewModel.State.CALL_DISCONNECTED, this.recipient, localCameraState, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled);
 
       if (this.callState == CallState.STATE_ANSWERING || this.callState == CallState.STATE_LOCAL_RINGING) {
         insertMissedCall(this.recipient, true);
@@ -649,8 +708,7 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
 
   private void insertMissedCall(@NonNull Recipient recipient, boolean signal) {
     Pair<Long, Long> messageAndThreadId = DatabaseFactory.getSmsDatabase(this).insertMissedCall(recipient.getAddress());
-    MessageNotifier.updateNotification(this, KeyCachingService.getMasterSecret(this),
-                                       messageAndThreadId.second, signal);
+    MessageNotifier.updateNotification(this, messageAndThreadId.second, signal);
   }
 
   private void handleAnswerCall(Intent intent) {
@@ -699,7 +757,7 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
 
       this.dataChannel.send(new DataChannel.Buffer(ByteBuffer.wrap(Data.newBuilder().setHangup(Hangup.newBuilder().setId(this.callId)).build().toByteArray()), false));
       sendMessage(this.recipient, SignalServiceCallMessage.forHangup(new HangupMessage(this.callId)));
-      sendMessage(WebRtcViewModel.State.CALL_DISCONNECTED, this.recipient, localVideoEnabled, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled);
+      sendMessage(WebRtcViewModel.State.CALL_DISCONNECTED, this.recipient, localCameraState, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled);
     }
 
     terminate();
@@ -716,9 +774,9 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
     }
 
     if (this.callState == CallState.STATE_DIALING || this.callState == CallState.STATE_REMOTE_RINGING) {
-      sendMessage(WebRtcViewModel.State.RECIPIENT_UNAVAILABLE, this.recipient, localVideoEnabled, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled);
+      sendMessage(WebRtcViewModel.State.RECIPIENT_UNAVAILABLE, this.recipient, localCameraState, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled);
     } else {
-      sendMessage(WebRtcViewModel.State.CALL_DISCONNECTED, this.recipient, localVideoEnabled, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled);
+      sendMessage(WebRtcViewModel.State.CALL_DISCONNECTED, this.recipient, localCameraState, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled);
     }
 
     if (this.callState == CallState.STATE_ANSWERING || this.callState == CallState.STATE_LOCAL_RINGING) {
@@ -741,26 +799,25 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
     AudioManager audioManager = ServiceUtil.getAudioManager(this);
     boolean      muted        = intent.getBooleanExtra(EXTRA_MUTE, false);
 
-    this.localVideoEnabled = !muted;
-
     if (this.peerConnection != null) {
-      this.peerConnection.setVideoEnabled(this.localVideoEnabled);
+      this.peerConnection.setVideoEnabled(!muted);
+      this.localCameraState = this.peerConnection.getCameraState();
     }
 
     if (this.callId != null && this.dataChannel != null) {
       this.dataChannel.send(new DataChannel.Buffer(ByteBuffer.wrap(Data.newBuilder()
                                                                        .setVideoStreamingStatus(WebRtcDataProtos.VideoStreamingStatus.newBuilder()
                                                                                                                                      .setId(this.callId)
-                                                                                                                                     .setEnabled(localVideoEnabled))
+                                                                                                                                     .setEnabled(!muted))
                                                                        .build().toByteArray()), false));
     }
 
     if (callState == CallState.STATE_CONNECTED) {
-      if (localVideoEnabled) this.lockManager.updatePhoneState(LockManager.PhoneState.IN_VIDEO);
-      else                   this.lockManager.updatePhoneState(LockManager.PhoneState.IN_CALL);
+      if (localCameraState.isEnabled()) this.lockManager.updatePhoneState(LockManager.PhoneState.IN_VIDEO);
+      else                              this.lockManager.updatePhoneState(LockManager.PhoneState.IN_CALL);
     }
 
-    if (localVideoEnabled &&
+    if (localCameraState.isEnabled() &&
         !audioManager.isSpeakerphoneOn() &&
         !audioManager.isBluetoothScoOn() &&
         !audioManager.isWiredHeadsetOn())
@@ -768,19 +825,31 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
       audioManager.setSpeakerphoneOn(true);
     }
 
-    sendMessage(viewModelStateFor(callState), this.recipient, localVideoEnabled, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled);
+    sendMessage(viewModelStateFor(callState), this.recipient, localCameraState, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled);
+  }
+
+  private void handleSetCameraFlip(Intent intent) {
+    Log.i(TAG, "handleSetCameraFlip()...");
+
+    if (localCameraState.isEnabled() && peerConnection != null) {
+      peerConnection.flipCamera();
+      localCameraState = peerConnection.getCameraState();
+      if (recipient != null) {
+        sendMessage(viewModelStateFor(callState), recipient, localCameraState, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled);
+      }
+    }
   }
 
   private void handleBluetoothChange(Intent intent) {
     this.bluetoothAvailable = intent.getBooleanExtra(EXTRA_AVAILABLE, false);
 
     if (recipient != null) {
-      sendMessage(viewModelStateFor(callState), recipient, localVideoEnabled, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled);
+      sendMessage(viewModelStateFor(callState), recipient, localCameraState, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled);
     }
   }
 
   private void handleWiredHeadsetChange(Intent intent) {
-    Log.w(TAG, "handleWiredHeadsetChange...");
+    Log.i(TAG, "handleWiredHeadsetChange...");
 
     if (callState == CallState.STATE_CONNECTED ||
         callState == CallState.STATE_DIALING   ||
@@ -792,12 +861,12 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
       if (present && audioManager.isSpeakerphoneOn()) {
         audioManager.setSpeakerphoneOn(false);
         audioManager.setBluetoothScoOn(false);
-      } else if (!present && !audioManager.isSpeakerphoneOn() && !audioManager.isBluetoothScoOn() && localVideoEnabled) {
+      } else if (!present && !audioManager.isSpeakerphoneOn() && !audioManager.isBluetoothScoOn() && localCameraState.isEnabled()) {
         audioManager.setSpeakerphoneOn(true);
       }
 
       if (recipient != null) {
-        sendMessage(viewModelStateFor(callState), recipient, localVideoEnabled, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled);
+        sendMessage(viewModelStateFor(callState), recipient, localCameraState, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled);
       }
     }
   }
@@ -806,7 +875,7 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
     if (callState == CallState.STATE_ANSWERING ||
         callState == CallState.STATE_LOCAL_RINGING)
     {
-      Log.w(TAG, "Silencing incoming ringer...");
+      Log.i(TAG, "Silencing incoming ringer...");
       audioManager.silenceIncomingRinger();
     }
   }
@@ -821,7 +890,7 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
     }
 
     this.remoteVideoEnabled = !muted;
-    sendMessage(WebRtcViewModel.State.CALL_CONNECTED, this.recipient, localVideoEnabled, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled);
+    sendMessage(WebRtcViewModel.State.CALL_CONNECTED, this.recipient, localCameraState, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled);
   }
 
   /// Helper Methods
@@ -885,10 +954,10 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
     }
 
     this.callState                 = CallState.STATE_IDLE;
+    this.localCameraState          = CameraState.UNKNOWN;
     this.recipient                 = null;
     this.callId                    = null;
     this.microphoneEnabled         = true;
-    this.localVideoEnabled         = false;
     this.remoteVideoEnabled        = false;
     this.pendingOutgoingIceUpdates = null;
     this.pendingIncomingIceUpdates = null;
@@ -897,20 +966,24 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
 
 
   private void sendMessage(@NonNull WebRtcViewModel.State state,
-                           @NonNull Recipient recipient,
-                           boolean localVideoEnabled, boolean remoteVideoEnabled,
-                           boolean bluetoothAvailable, boolean microphoneEnabled)
+                           @NonNull Recipient             recipient,
+                           @NonNull CameraState           localCameraState,
+                                    boolean               remoteVideoEnabled,
+                                    boolean               bluetoothAvailable,
+                                    boolean               microphoneEnabled)
   {
-    EventBus.getDefault().postSticky(new WebRtcViewModel(state, recipient, localVideoEnabled, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled));
+    EventBus.getDefault().postSticky(new WebRtcViewModel(state, recipient, localCameraState, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled));
   }
 
   private void sendMessage(@NonNull WebRtcViewModel.State state,
-                           @NonNull Recipient recipient,
-                           @NonNull IdentityKey identityKey,
-                           boolean localVideoEnabled, boolean remoteVideoEnabled,
-                           boolean bluetoothAvailable, boolean microphoneEnabled)
+                           @NonNull Recipient             recipient,
+                           @NonNull IdentityKey           identityKey,
+                           @NonNull CameraState           localCameraState,
+                                    boolean               remoteVideoEnabled,
+                                    boolean               bluetoothAvailable,
+                                    boolean               microphoneEnabled)
   {
-    EventBus.getDefault().postSticky(new WebRtcViewModel(state, recipient, identityKey, localVideoEnabled, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled));
+    EventBus.getDefault().postSticky(new WebRtcViewModel(state, recipient, identityKey, localCameraState, remoteVideoEnabled, bluetoothAvailable, microphoneEnabled));
   }
 
   private ListenableFutureTask<Boolean> sendMessage(@NonNull final Recipient recipient,
@@ -960,12 +1033,12 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
   /// PeerConnection Observer
   @Override
   public void onSignalingChange(PeerConnection.SignalingState newState) {
-    Log.w(TAG, "onSignalingChange: " + newState);
+    Log.i(TAG, "onSignalingChange: " + newState);
   }
 
   @Override
   public void onIceConnectionChange(PeerConnection.IceConnectionState newState) {
-    Log.w(TAG, "onIceConnectionChange:" + newState);
+    Log.i(TAG, "onIceConnectionChange:" + newState);
 
     if (newState == PeerConnection.IceConnectionState.CONNECTED ||
         newState == PeerConnection.IceConnectionState.COMPLETED)
@@ -985,18 +1058,18 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
 
   @Override
   public void onIceConnectionReceivingChange(boolean receiving) {
-    Log.w(TAG, "onIceConnectionReceivingChange:" + receiving);
+    Log.i(TAG, "onIceConnectionReceivingChange:" + receiving);
   }
 
   @Override
   public void onIceGatheringChange(PeerConnection.IceGatheringState newState) {
-    Log.w(TAG, "onIceGatheringChange:" + newState);
+    Log.i(TAG, "onIceGatheringChange:" + newState);
 
   }
 
   @Override
   public void onIceCandidate(IceCandidate candidate) {
-    Log.w(TAG, "onIceCandidate:" + candidate);
+    Log.i(TAG, "onIceCandidate:" + candidate);
     Intent intent = new Intent(this, WebRtcCallService.class);
 
     intent.setAction(ACTION_ICE_CANDIDATE);
@@ -1010,37 +1083,37 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
 
   @Override
   public void onIceCandidatesRemoved(IceCandidate[] candidates) {
-    Log.w(TAG, "onIceCandidatesRemoved:" + (candidates != null ? candidates.length : null));
+    Log.i(TAG, "onIceCandidatesRemoved:" + (candidates != null ? candidates.length : null));
   }
 
   @Override
   public void onAddStream(MediaStream stream) {
-    Log.w(TAG, "onAddStream:" + stream);
+    Log.i(TAG, "onAddStream:" + stream);
 
     for (AudioTrack audioTrack : stream.audioTracks) {
       audioTrack.setEnabled(true);
     }
 
     if (stream.videoTracks != null && stream.videoTracks.size() == 1) {
-      VideoTrack videoTrack = stream.videoTracks.getFirst();
+      VideoTrack videoTrack = stream.videoTracks.get(0);
       videoTrack.setEnabled(true);
-      videoTrack.addRenderer(new VideoRenderer(remoteRenderer));
+      videoTrack.addSink(remoteRenderer);
     }
   }
 
   @Override
   public void onAddTrack(RtpReceiver rtpReceiver, MediaStream[] mediaStreams) {
-    Log.w(TAG, "onAddTrack: " + mediaStreams);
+    Log.i(TAG, "onAddTrack: " + mediaStreams);
   }
 
   @Override
   public void onRemoveStream(MediaStream stream) {
-    Log.w(TAG, "onRemoveStream:" + stream);
+    Log.i(TAG, "onRemoveStream:" + stream);
   }
 
   @Override
   public void onDataChannel(DataChannel dataChannel) {
-    Log.w(TAG, "onDataChannel:" + dataChannel.label());
+    Log.i(TAG, "onDataChannel:" + dataChannel.label());
 
     if (dataChannel.label().equals(DATA_CHANNEL_NAME)) {
       this.dataChannel = dataChannel;
@@ -1050,23 +1123,23 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
 
   @Override
   public void onRenegotiationNeeded() {
-    Log.w(TAG, "onRenegotiationNeeded");
+    Log.i(TAG, "onRenegotiationNeeded");
     // TODO renegotiate
   }
 
   @Override
   public void onBufferedAmountChange(long l) {
-    Log.w(TAG, "onBufferedAmountChange: " + l);
+    Log.i(TAG, "onBufferedAmountChange: " + l);
   }
 
   @Override
   public void onStateChange() {
-    Log.w(TAG, "onStateChange");
+    Log.i(TAG, "onStateChange");
   }
 
   @Override
   public void onMessage(DataChannel.Buffer buffer) {
-    Log.w(TAG, "onMessage...");
+    Log.i(TAG, "onMessage...");
 
     try {
       byte[] data = new byte[buffer.data.remaining()];
@@ -1075,19 +1148,19 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
       Data dataMessage = Data.parseFrom(data);
 
       if (dataMessage.hasConnected()) {
-        Log.w(TAG, "hasConnected...");
+        Log.i(TAG, "hasConnected...");
         Intent intent = new Intent(this, WebRtcCallService.class);
         intent.setAction(ACTION_CALL_CONNECTED);
         intent.putExtra(EXTRA_CALL_ID, dataMessage.getConnected().getId());
         startService(intent);
       } else if (dataMessage.hasHangup()) {
-        Log.w(TAG, "hasHangup...");
+        Log.i(TAG, "hasHangup...");
         Intent intent = new Intent(this, WebRtcCallService.class);
         intent.setAction(ACTION_REMOTE_HANGUP);
         intent.putExtra(EXTRA_CALL_ID, dataMessage.getHangup().getId());
         startService(intent);
       } else if (dataMessage.hasVideoStreamingStatus()) {
-        Log.w(TAG, "hasVideoStreamingStatus...");
+        Log.i(TAG, "hasVideoStreamingStatus...");
         Intent intent = new Intent(this, WebRtcCallService.class);
         intent.setAction(ACTION_REMOTE_VIDEO_MUTE);
         intent.putExtra(EXTRA_CALL_ID, dataMessage.getVideoStreamingStatus().getId());
@@ -1100,28 +1173,25 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
   }
 
   private ListenableFutureTask<List<PeerConnection.IceServer>> retrieveTurnServers() {
-    Callable<List<PeerConnection.IceServer>> callable = new Callable<List<PeerConnection.IceServer>>() {
-      @Override
-      public List<PeerConnection.IceServer> call() {
-        LinkedList<PeerConnection.IceServer> results = new LinkedList<>();
+    Callable<List<PeerConnection.IceServer>> callable = () -> {
+      LinkedList<PeerConnection.IceServer> results = new LinkedList<>();
 
-        try {
-          TurnServerInfo turnServerInfo = accountManager.getTurnServerInfo();
+      try {
+        TurnServerInfo turnServerInfo = accountManager.getTurnServerInfo();
 
-          for (String url : turnServerInfo.getUrls()) {
-            if (url.startsWith("turn")) {
-              results.add(new PeerConnection.IceServer(url, turnServerInfo.getUsername(), turnServerInfo.getPassword()));
-            } else {
-              results.add(new PeerConnection.IceServer(url));
-            }
+        for (String url : turnServerInfo.getUrls()) {
+          if (url.startsWith("turn")) {
+            results.add(new PeerConnection.IceServer(url, turnServerInfo.getUsername(), turnServerInfo.getPassword()));
+          } else {
+            results.add(new PeerConnection.IceServer(url));
           }
-
-        } catch (IOException e) {
-          Log.w(TAG, e);
         }
 
-        return results;
+      } catch (IOException e) {
+        Log.w(TAG, e);
       }
+
+      return results;
     };
 
     ListenableFutureTask<List<PeerConnection.IceServer>> futureTask = new ListenableFutureTask<>(callable, null, serviceExecutor);
@@ -1261,7 +1331,7 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
 
   @WorkerThread
   public static boolean isCallActive(Context context) {
-    Log.w(TAG, "isCallActive()");
+    Log.i(TAG, "isCallActive()");
 
     HandlerThread handlerThread = null;
 
@@ -1273,7 +1343,7 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
 
       ResultReceiver resultReceiver = new ResultReceiver(new Handler(handlerThread.getLooper())) {
         protected void onReceiveResult(int resultCode, Bundle resultData) {
-          Log.w(TAG, "Got result...");
+          Log.i(TAG, "Got result...");
           future.set(resultCode == 1);
         }
       };
@@ -1284,7 +1354,7 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
 
       context.startService(intent);
 
-      Log.w(TAG, "Blocking on result...");
+      Log.i(TAG, "Blocking on result...");
       return future.get();
     } catch (InterruptedException | ExecutionException e) {
       Log.w(TAG, e);
